@@ -29,7 +29,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $Id: exiftags.1,v 1.24 2004/04/15 05:43:44 ejohnst Exp $
+.\" $Id: exiftags.1,v 1.25 2004/04/20 22:18:56 ejohnst Exp $
 .\"
 .SH NAME
 .B exiftags
@@ -108,6 +108,8 @@ Nikon
 .br
 Olympus
 .br
+Panasonic
+.br
 Sanyo
 .PP
 If you wish support for additional
@@ -139,7 +141,8 @@ Jhead utility, version 1.2, by Matthias Wandel <mwandel@rim.net>.
 Some maker note support is the result of TsuruZoh Tachibanaya's
 compendium (http://www.ba.wakwak.com/~tsuruzoh/Computer/Digicams/exif-e.html)
 and its contributers.  Minolta maker note support was contributed by
-Javier Crespo <jcrespoc@dsland.org>.
+Javier Crespo <jcrespoc@dsland.org>.  Panasonic maker note support was
+contributed by Tom Hughes <tom@compton.nu>.
 .PP
 Special thanks to the following folks for submitting sample camera files:
 Kirk Bauer, Marcy Brown, Frank Fortunato, Stan Jirman, Kaye Kirsch,
