@@ -29,7 +29,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- * $Id: makers.c,v 1.9 2004/04/04 21:09:15 ejohnst Exp $
+ * $Id: makers.c,v 1.10 2004/04/20 22:18:56 ejohnst Exp $
  */
 
 /*
@@ -54,5 +54,6 @@ struct makerfun makers[] = {
 	{ EXIF_MKR_ASAHI, "asahi", asahi_prop, asahi_ifd },
 	{ EXIF_MKR_PENTAX, "pentax", asahi_prop, asahi_ifd },
 	{ EXIF_MKR_LEICA, "leica", leica_prop, leica_ifd },
+	{ EXIF_MKR_PANASONIC, "panasonic", panasonic_prop, panasonic_ifd },
 	{ EXIF_MKR_UNKNOWN, "unknown", NULL, NULL },
 };
